Fix minor layout issues

--- a/docassemble_webapp/docassemble/webapp/static/app/app.css
+++ b/docassemble_webapp/docassemble/webapp/static/app/app.css
@@ -5,9 +5,12 @@ html {
 body {
     font-family: 'Lato', sans-serif !important;
 }
+.navbar-brand img.brand-logo {
+    width:100px !important;
+}
 .navbar-brand span {
     display: inline-block;
-    transform: scale(1.2, 1.3);
+    transform: scale(1.1, 1.1);
     margin-left: 5px;
     position: relative;
     top: 3px;
@@ -18,7 +21,7 @@ body {
 @media (min-width: 768px) {
     .navbar-brand span.d-md-inline {
         display: inline-block !important;
-        margin: 0 35px;
+        margin: 0 15px;
     }
 }
 body.dabody {
